--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular": "^1.6.2",
     "angular-resource": "^1.6.2",
     "angular-route": "^1.6.2",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-mocks": "^1.6.2"
   }
 }
